--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "require": {
         "php": ">=5.4",
         "composer/installers": "~1.0",
+        "idavoll/core-module": "~2.0",
         "google/recaptcha": "~1.1"
     },
     "require-dev": {
